# TUM_IDP_App_Based_Webscraping

./: .gitignore  README.md  README.rst  pyproject.toml  token.txt
.test_env/: pyvenv.cfg
docs/doctrees/: about.doctree  environment.pickle  index.doctree  source.doctree  source_old.doctree  usage.doctree
docs/html/: .buildinfo  about.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  source.html  source_old.html  usage.html
docs/html/_sources/: about.rst.txt  source.rst.txt  usage.rst.txt
docs/source/: conf.py  index.rst  source.rst  usage.rst
requests/: followres.json  response.json  response_2.json
requests/browser/: profile_by_id.json  profile_by_username.json
requests/data_mining/profiles/: battlenet_posts.json  callofduty_posts.json  callofduty_replies.json  callofduty_reposts.json  championsleague_posts.json  crunchyroll_posts.json  crunchyroll_replies.json  google_posts.json  hubermanlab_posts.json  hubermanlab_replies.json  hubermanlab_reposts.json  playstation_posts.json  playstation_replies.json  xbox_posts.json  xbox_replies.json  youtube_posts.json  youtube_replies.json  zuckerberg_replies.json
requests/media/: medias06-11.json
requests/no_cookies/: posts_by_userid copy.json  posts_by_userid.json  profile_by_id.json  profile_by_username.json
requests/post/: single.json
requests/threads/: likers.json  threads.json  xboxgamepass.json
requests/user_info/: championsleague.json  hubermanlab.json  userID.json  username.json
src/: discards.py  medias02-11.json  medias31-10.json  postSchemas.py  posts.py  response.json  schemas.py  search.py  test.ipynb  users.py  utils.py
src/threadscraper/: login.py  mediaSchemas.py  postSchemas.py  posts.py  search.py  userSchemas.py  users.py  utils.py
src/tum_idp_appscraping/: queryuser.py
tests/: test_threads.py
