[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tum_idp_appscraping"
version = "0.0.1"
authors = [
  { name="Jorge Marin", email="ge58pib@mytum.de" },
]
description = "Data Scraper from Threads by Meta"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/darkrai27/TUM_IDP_App_Based_Webscraping"
"Bug Tracker" = "https://github.com/darkrai27/TUM_IDP_App_Based_Webscraping/issues"