[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threadscraper"
version = "0.0.2.3.24"
authors = [
  { name="Jorge Marin", email="ge58pib@mytum.de" },
]
description = "Data Scraper from Threads by Meta"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.31.0",
  "pydantic",
  "pydantic_core",
  "pydantic_settings",
  "python-dotenv",
  "selenium",
  "selenium-wire==5.1.0",
  "simplejson"]
requires-python = ">=3.11"


[project.urls]
"Homepage" = "https://github.com/darkrai27/TUM_IDP_App_Based_Webscraping"
"Bug Tracker" = "https://github.com/darkrai27/TUM_IDP_App_Based_Webscraping/issues"